Atualizar dependências e melhorar a configuração do treinamento do modelo YOLOv8 para detecção de poses de idosos

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "opencv-python>=4.11.0.86",
+    "opencv-python==4.10.0.84",
     "pandas>=2.2.3",
     "rich>=13.9.4",
-    "ultralytics>=8.3.74",
+    "ultralytics>=8.3.78",
 ]
 
 [dependency-groups]
@@ -34,7 +34,7 @@ quote-style = 'single'
 lint = 'ruff check . && ruff check . --diff'
 format = 'ruff check . --fix && ruff format .'
 jupyter = 'uv run --with jupyter jupyter lab'
-run_main = "python main.py"
+run = "python main.py"
 run_main_video = "python main.py --video_path video_idoso.mp4"
 run_main_camera = "python main.py --video_path 0"
 run_main_custom = "python main.py --video_path {path} --duration {duration} --weights {weights}"
