--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,14 +28,12 @@ jobs:
       - uses: actions/checkout@v4
         with:
           sparse-checkout: |
-            *
-            .*
-            !downloads/YOLOElderlyPose.v2i.yolov11/test
-            !downloads/YOLOElderlyPose.v2i.yolov11/train
-            !downloads/YOLOElderlyPose.v2i.yolov11/valid
-            !downloads/YOLOElderlyPose.v3i.yolov11/test
-            !downloads/YOLOElderlyPose.v3i.yolov11/train
-            !downloads/YOLOElderlyPose.v3i.yolov11/valid
+            main.py
+            constants.py
+            runs/pose/train/weights/best.pt
+            downloads/YOLOElderlyPose.v2i.yolov11/data.yaml
+            pyproject.toml
+            uv.lock
 
       - name: Install Linux dependencies
         if: matrix.config.os == 'ubuntu-22.04'
